--- a/src/style.css
+++ b/src/style.css
@@ -1,33 +1,22 @@
-#title {
-  text-align: center;
-}
-
-#form {
-  text-align: center;
-}
-
-li {
-  position: relative;
-  left: 30%;
-  width: 280px;
-  list-style-type: none;
-  padding: 5px;
-  font-size: 14px;
-  margin: 5px;
-  background-color: #ffd8a8;
-}
-
-.deleteBtn {
-  position: relative;
-  right: ;
-}
 input {
-  width: 300px;
+  width: 330px;
   height: 30px;
   border: none;
   background-color: #f1f3f5;
 }
+
 button {
   border: none;
   background-color: transparent;
+}
+
+li {
+  position: relative;
+  width: 320px;
+  list-style-type: none;
+  padding: 5px;
+  font-size: 14px;
+  margin-top: 5px;
+  margin-bottom: 5px;
+  background-color: #ffd8a8;
 }
